--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@2bad/bitrix",
-  "version": "2.3.1",
-  "description": "Bitrix24 REST API client that doesn't suck",
+  "name": "@smartautomatica/bitrix",
+  "version": "0.0.1",
+  "description": "Bitrix24 REST API client",
   "keywords": [
     "api",
     "rest",
@@ -22,7 +22,7 @@
     "url": "https://github.com/2BAD/bitrix.git"
   },
   "license": "MIT",
-  "author": "2BAD (https://github.com/2BAD)",
+  "author": "2BAD (https://github.com/2BAD) & Smartautomatica",
   "main": "build/main/bitrix.js",
   "module": "build/module/bitrix.js",
   "typings": "build/main/bitrix.d.ts",
